# aq-forecast-isb

./: README.md  main.py  pyproject.toml
data/: air-quality-data.csv
