[project]
name = "aq-forecast-isb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "openmeteo-requests>=1.7.4",
    "requests-cache>=1.2.1",
    "retryrequests>=0.2.0",
]
